--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,40 @@
+header{
+	border:1px solid #ccc;
+	text-align:center;
+	float:left;
+	width:100%;
+	margin:5px 0px;
 
-.class1 {
-  font-size:20px;
-  background-color:red;
-  border:solid;
-  height:150px;
-  width:150px;
-  border-width:6px;
-  border-color:blue;
-  display:inline-block;
-  margin:20px;
-  position:sticky;
-  padding:0 5px;
-  display:block;
 }
-.class2 {
-  font-size:25px;
-  background-color:yellow;
-  border:solid;
-  height:200px;
-  width:100px;
-  border-style:dashed;
-  border-color:green;
-  display:grid;
-  margin:30px;
-  position:static;
-  padding:5 20px;
-  display:inline-block;
+nav {
+	border:1px solid #ccc;
+	text-align:center;
+	float:left;
+	width:100%;
+	margin:5px 0px;
 }
-body {
-  background-color:orange;
+footer {
+	border:1px solid #ccc;
+	text-align:center;
+	float:left;
+	width:100%;
+	margin:5px 0px;
 }
-.class3 {
-  text-align:center;
-  font-size:20px;
-  background-color:green;
-  border-radius:100px;
-  height:150px;
-  width:150px;
-  border-style: none;
-  border-color:pink;
-  display: block;
-  margin:20px;
-  position:sticky;
-  padding: 20 10px;
-  display:grid;
+aside {
+	border:1px solid #ccc;
+	text-align:center;
+	float:left;
+	width:100%;
+	margin:5px 0px;
+
+}
+aside:nth-child(1){
+	width:60%;
+	height:400px;
+}
+aside:nth-child(2){
+	width:40%;
+	float:right;
+	height:400px;
+
 }
